# Trenako

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  branches.list  cobertura.xml  docker-compose.yml  rustfmt.toml  sqlx-data.json
crates/catalog/: Cargo.toml
crates/catalog/src/: common.rs  lib.rs  test_helpers.rs
crates/catalog/src/brands/: brand.rs  brand_id.rs  brand_kind.rs  brand_request.rs  brand_response.rs  brand_status.rs  brand_type.rs  mod.rs  test_data.rs
crates/catalog/src/brands/commands/: mod.rs  new_brand.rs  repositories.rs
crates/catalog/src/brands/queries/: brand_row.rs  find_all_brands.rs  find_brand_by_id.rs  find_by_id.rs  mod.rs  row_converters.rs
crates/catalog/src/catalog_items/: availability_status.rs  catalog_item.rs  catalog_item_id.rs  catalog_item_request.rs  catalog_item_response.rs  category.rs  control.rs  delivery_date.rs  epoch.rs  item_number.rs  length_over_buffer.rs  length_over_buffers.rs  mod.rs  power_method.rs  rolling_stock.rs  rolling_stock_id.rs  rolling_stock_request.rs  rolling_stock_response.rs  service_level.rs  tech_specs.rs  technical_specifications.rs  test_data.rs
crates/catalog/src/catalog_items/commands/: mod.rs  new_catalog_item.rs  repositories.rs
crates/catalog/src/catalog_items/queries/: catalog_item_row.rs  find_catalog_item_by_id.rs  mod.rs  rolling_stock_row.rs  row_converters.rs
crates/catalog/src/railways/: mod.rs  period_of_activity.rs  railway.rs  railway_gauge.rs  railway_id.rs  railway_length.rs  railway_request.rs  railway_response.rs  test_data.rs
crates/catalog/src/railways/commands/: mod.rs  new_railways.rs  repositories.rs
crates/catalog/src/railways/queries/: find_all_railways.rs  find_railway_by_id.rs  mod.rs  railway_row.rs  row_converters.rs
crates/catalog/src/scales/: mod.rs  ratio.rs  scale.rs  scale_gauge.rs  scale_id.rs  scale_request.rs  scale_response.rs  standard.rs  test_data.rs
crates/catalog/src/scales/commands/: mod.rs  new_scales.rs  repositories.rs
crates/catalog/src/scales/queries/: find_all_scales.rs  find_scale_by_id.rs  mod.rs  row_converters.rs  scale_row.rs
crates/cli/: Cargo.toml
crates/cli/resources/brands/: piko.json
crates/cli/resources/railways/: db.json
crates/cli/src/: cli_parser.rs  lib.rs  main.rs
crates/cli/src/data/: brands.rs  catalog_items.rs  common.rs  mod.rs  railways.rs  scales.rs
crates/cli/src/dataset/: mod.rs
crates/cli/src/schemas/: brands.schema.json  catalog-items.schema.json  mod.rs  railways.schema.json  scales.schema.json
crates/cli/src/validator/: mod.rs
crates/cli/tests/: dataset_tests.rs
crates/common/: Cargo.toml
crates/common/src/: address.rs  contact.rs  in_memory.rs  length.rs  lib.rs  localized_text.rs  measure_units.rs  metadata.rs  organizations.rs  slug.rs  socials.rs  trn.rs  unit_of_work.rs  validation.rs
crates/common/src/contacts/: emails.rs  mod.rs  phones.rs  website_urls.rs
crates/common/src/queries/: aggregate.rs  converters.rs  errors.rs  mod.rs  single_result.rs
crates/configuration/: Cargo.toml
crates/configuration/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: aggregate.rs  converters.rs  lib.rs
crates/db/src/catalog/: brands.rs  scales.rs
crates/db/src/catalog/brands/: mod.rs  repositories.rs
crates/db/src/catalog/catalog_item/: mod.rs  repositories.rs
crates/db/src/catalog/railways/: mod.rs  railway_row.rs  repositories.rs
crates/db/src/catalog/scales/: mod.rs  repositories.rs
crates/libs/catalog/: Cargo.toml
crates/libs/catalog/src/: common.rs
crates/libs/catalog/src/brands/: brand.rs  brand_kind.rs  brand_request.rs  test_data.rs
crates/libs/catalog/src/catalog_items/: availability_status.rs  catalog_item.rs  catalog_item_id.rs  catalog_item_request.rs  catalog_item_response.rs  category.rs  control.rs  delivery_date.rs  item_number.rs  mod.rs  power_method.rs  rolling_stock.rs  rolling_stock_id.rs  rolling_stock_request.rs  rolling_stock_response.rs  service_level.rs  technical_specifications.rs  test_data.rs
crates/libs/catalog/src/railways/: mod.rs  railway_gauge.rs  railway_id.rs  railway_request.rs
crates/libs/catalog/src/scales/: ratio.rs  scale.rs  scale_request.rs
crates/libs/common/: Cargo.toml
crates/libs/common/src/: in_memory.rs  lib.rs  localized_text.rs  measure_units.rs  metadata.rs  organizations.rs  socials.rs  test_helpers.rs  unit_of_work.rs  validation.rs
crates/libs/common/src/contacts/: emails.rs  mod.rs  phones.rs  website_urls.rs
crates/libs/configuration/: Cargo.toml
crates/libs/configuration/src/: lib.rs
crates/libs/data/: Cargo.toml
crates/problem/: Cargo.toml
crates/problem/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  configuration.rs  health_check.rs  json_configuration.rs  lib.rs  main.rs  telemetry.rs  testing.rs
crates/server/src/api/: problem_detail.rs
crates/server/src/catalog/: mod.rs
crates/server/src/commands/: mod.rs
crates/server/src/hateoas/: links.rs  mod.rs  representations.rs
crates/server/src/web/: mod.rs  problem.rs  problem_detail.rs  queries.rs  responders.rs  trn.rs
crates/server/tests/: brand_tests.rs  catalog_item_tests.rs  railway_tests.rs  scale_tests.rs
crates/server/tests/common/: database.rs  mod.rs  seeding.rs
crates/server/tests/resources/: brands.json  catalog_items.json  railways.json  scales.json
crates/services/server/: Cargo.toml
crates/services/server/src/: app.rs  health_check.rs  lib.rs  main.rs  state.rs  testing.rs  tracing.rs
crates/services/server/tests/: brand_tests.rs  catalog_item_tests.rs  health_check.rs  railway_tests.rs  scale_tests.rs
crates/tools/cli/: Cargo.toml
crates/tools/cli/src/: cli_parser.rs  lib.rs  main.rs
crates/tools/cli/tests/: dataset_tests.rs  import_csv_tests.rs
crates/web/: Cargo.toml
crates/web/src/: configuration.rs  lib.rs  main.rs  server.rs
crates/web/src/api/: mod.rs  problem_detail.rs
crates/web/src/catalog/: routes.rs
crates/web/src/handlers/: catalog.rs
crates/web/tests/: health_check.rs
crates/web/tests/common/: mod.rs
(+2678 files in other folders)
