[workspace]
members = [
    "crates/libs/catalog",
    "crates/libs/common",
    "crates/libs/configuration",
    "crates/libs/data",
    "crates/services/server",
    "crates/tools/cli",
]
resolver = "2"

[workspace.package]
authors         = ["CarloMicieli <piovarolo@gmail.com>"]
documentation   = "https://github.com/CarloMicieli/trenako"
edition         = "2021"
homepage        = "https://github.com/CarloMicieli/trenako"
license         = "Apache-2.0"
readme          = "README.md"
repository      = "https://github.com/CarloMicieli/trenako"
rust-version    = "1.75"
version         = "0.1.0"

[workspace.dependencies]
anyhow              = "1.0.79"
async-trait         = "0.1.77"
axum                = "0.7.4"
axum-macros         = "0.4.1"
chrono              = { version = "0.4.31", features = ["serde"] }
clap                = { version = "4.4.16", features = ["derive"] }
config              = { version = "0.13.4", default-features = false, features = ["yaml"] }
csv                 = "1.3.0"
dockertest          = { version = "0.4.0", features = ["tls"] }
http                = "1.0.0"
http-body-util      = "0.1.0"
hyper               = { version = "1.1.0", features = ["http1", "server"] }
isocountry          = "0.3.2"
itertools           = "0.12.0"
jsonschema          = "0.17.1"
lazy_static         = "1.4.0"
mime                = "0.3.17"
pretty_assertions   = "1.4.0"
rand                = "0.8.5"
regex               = "1.10.2"
reqwest             = { version = "0.11.23", features = ["json"] }
rstest              = "0.18.2"
rust_decimal        = { version = "1.33.1", features = ["serde-with-float"] }
rust_decimal_macros = "1.33.1"
secrecy             = { version = "0.8.0", features = ["serde"] }
serde               = { version = "1.0.195", features = ["derive"] }
serde_derive        = "1.0.195"
serde_json          = "1.0.111"
serde_urlencoded    = "0.7.1"
slug                = "0.1.5"
strum               = "0.25.0"
strum_macros        = "0.25.3"
thiserror           = "1.0.56"
tokio               = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower               = { version = "0.4.13", features = ["limit", "timeout"] }
tower-http          = { version = "0.5.0", features = ["compression-gzip", "propagate-header", "request-id", "trace"] }
tracing             = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber  = { version = "0.3.18", features = ["env-filter", "fmt", "json", "registry", "std"] }
url                 = { version = "2.5.0", features = ["serde"] }
uuid                = { version = "1.6.1", features = ["serde", "v4"] }
validator           = { version = "0.16.1", features = ["derive", "phone"] }
walkdir             = "2.4.0"

[workspace.dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "chrono",
    "rust_decimal",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid"
]

[workspace.dependencies.fake]
version = "2.9.2"
default-features = false
features = [
    "chrono",
    "rust_decimal",
    "uuid"
]

[profile.dev.package.sqlx-macros]
opt-level = 3
