[workspace]
members = [
    "crates/libs/catalog",
    "crates/libs/common",
    "crates/libs/configuration",
    "crates/libs/data",
    "crates/services/server",
    "crates/tools/cli",
]
resolver = "2"

[workspace.package]
authors         = ["CarloMicieli <piovarolo@gmail.com>"]
documentation   = "https://github.com/CarloMicieli/trenako"
edition         = "2021"
homepage        = "https://github.com/CarloMicieli/trenako"
license         = "Apache-2.0"
readme          = "README.md"
repository      = "https://github.com/CarloMicieli/trenako"
rust-version    = "1.81"
version         = "0.1.0"

[workspace.dependencies]
anyhow              = "1.0.89"
async-trait         = "0.1.83"
axum                = "0.7.6"
axum-macros         = "0.4.2"
chrono              = { version = "0.4.38", features = ["serde"] }
clap                = { version = "4.5.18", features = ["derive"] }
config              = { version = "0.14.0", default-features = false, features = ["yaml"] }
csv                 = "1.3.0"
dockertest          = { version = "0.5.0", features = ["tls"] }
http                = "1.1.0"
http-body-util      = "0.1.2"
hyper               = { version = "1.4.1", features = ["http1", "server"] }
isocountry          = "0.3.2"
itertools           = "0.13.0"
jsonschema          = "0.20.0"
lazy_static         = "1.5.0"
mime                = "0.3.17"
pretty_assertions   = "1.4.1"
rand                = "0.8.5"
regex               = "1.10.6"
reqwest             = { version = "0.12.7", features = ["json"] }
rstest              = "0.22.0"
rust_decimal        = { version = "1.36.0", features = ["serde-with-float"] }
rust_decimal_macros = "1.36.0"
secrecy             = { version = "0.10.2", features = ["serde"] }
serde               = { version = "1.0.210", features = ["derive"] }
serde_derive        = "1.0.210"
serde_json          = "1.0.128"
serde_urlencoded    = "0.7.1"
slug                = "0.1.6"
strum               = "0.26.3"
strum_macros        = "0.26.3"
thiserror           = "1.0.64"
tokio               = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower               = { version = "0.5.1", features = ["limit", "timeout"] }
tower-http          = { version = "0.6.1", features = ["compression-gzip", "propagate-header", "request-id", "trace"] }
tracing             = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber  = { version = "0.3.18", features = ["env-filter", "fmt", "json", "registry", "std"] }
url                 = { version = "2.5.2", features = ["serde"] }
uuid                = { version = "1.10.0", features = ["serde", "v4"] }
validator           = { version = "0.18.1", features = ["derive"] }
walkdir             = "2.5.0"

[workspace.dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "chrono",
    "rust_decimal",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid"
]

[workspace.dependencies.fake]
version = "2.9.2"
default-features = false
features = [
    "chrono",
    "rust_decimal",
    "uuid"
]

[profile.dev.package.sqlx-macros]
opt-level = 3
