[package]
name = "catalog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
common = { path = "../common" }
isocountry = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
