[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
isocountry = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
slug = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
