[package]
name = "configuration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
