[package]
name = "configuration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
config = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
