[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "trenako-server"

[dependencies]
catalog = { path = "../catalog" }
common = { path = "../common" }
db = { path = "../db" }
hateoas = { path = "../hateoas" }

actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mime = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
dockertest = { workspace = true }
isocountry = { workspace = true }
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
rust_decimal_macros = { workspace = true }
serde_derive = { workspace = true }
