[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "trenako-server"

[dependencies]
catalog = { path = "../catalog" }
common = { path = "../common" }
configuration = { path = "../configuration" }
data = { path = "../data" }
problem = { path = "../problem" }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
chrono = { workspace = true }
hyper = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mime = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
dockertest = { workspace = true }
isocountry = { workspace = true }
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
rust_decimal_macros = { workspace = true }
serde_derive = { workspace = true }
