[package]
name = "web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "trenako-server"

[dependencies]
actix-web = { workspace = true }
config = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
reqwest = "0.11.13"
testcontainers = "0.14.0"
