[package]
name = "web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "trenako-server"

[dependencies]
catalog = { path = "../catalog" }

actix-web = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
log = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
reqwest = { workspace = true }
