[package]
name = "catalog"

authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
common = { path = "../common" }

anyhow              = { workspace = true }
async-trait         = { workspace = true }
chrono              = { workspace = true }
isocountry          = { workspace = true }
itertools           = { workspace = true }
rust_decimal        = { workspace = true }
rust_decimal_macros = { workspace = true }
serde               = { workspace = true }
serde_derive        = { workspace = true }
sqlx                = { workspace = true }
strum               = { workspace = true }
strum_macros        = { workspace = true }
thiserror           = { workspace = true }
uuid                = { workspace = true }
validator           = { workspace = true }

[dev-dependencies]
fake                = { workspace = true }
pretty_assertions   = { workspace = true }
rand                = { workspace = true }
rstest              = { workspace = true }
serde_json          = { workspace = true }
tokio               = { workspace = true }
