[package]
name = "data"

authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
catalog = { path = "../catalog" }
common  = { path = "../common" }

anyhow              = { workspace = true }
async-trait         = { workspace = true }
chrono              = { workspace = true }
isocountry          = { workspace = true }
rust_decimal        = { workspace = true }
sqlx                = { workspace = true }

[dev-dependencies]
pretty_assertions   = { workspace = true }
rstest              = { workspace = true }
rust_decimal_macros = { workspace = true }
