[package]
name = "cli"

authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "trenako-cli"

[dependencies]
catalog = { path = "../../libs/catalog" }
common  = { path = "../../libs/common" }

anyhow              = { workspace = true }
chrono              = { workspace = true }
clap                = { workspace = true }
csv                 = { workspace = true }
itertools           = { workspace = true }
jsonschema          = { workspace = true }
rust_decimal        = { workspace = true }
serde               = { workspace = true }
serde_derive        = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
walkdir             = { workspace = true }

[dev-dependencies]
pretty_assertions   = { workspace = true }
rstest              = { workspace = true }
rust_decimal_macros = { workspace = true }
